# gios-pr3-inter_process_communication

./: readme-student.md
cache/: CMakeLists.txt  handle_with_cache.c  pr3_proxy_cache-result-2018-04-03-06-04-03.json  pr3_proxy_cache-result-2018-04-03-06-12-36.json  pr3_proxy_cache-result-2018-04-03-06-37-13.json  shm_channel.c  shm_channel.h  simplecache.c  simplecached.c  webproxy.c
server/: CMakeLists.txt  download_files.sh  handle_with_curl.c  metrics.txt  pr3_proxy_server-result-2018-03-26-06-11-05.json  pr3_proxy_server-result-2018-03-26-06-29-26.json  pr3_proxy_server-result-2018-03-30-11-17-00.json  pr3_proxy_server-result-2018-03-30-11-54-39.json  pr3_proxy_server-result-2018-03-30-12-19-00.json  pr3_proxy_server-result-2018-03-30-12-39-28.json  pr3_proxy_server-result-2018-03-30-12-55-38.json  pr3_proxy_server-result-2018-03-31-00-21-35.json  pr3_proxy_server-result-2018-03-31-00-47-55.json  pr3_proxy_server-result-2018-03-31-09-37-04.json  pr3_proxy_server-result-2018-03-31-20-36-14.json  pr3_proxy_server-result-2018-03-31-22-11-35.json  pr3_proxy_server-result-2018-03-31-22-47-51.json  pr3_proxy_server-result-2018-04-01-08-58-18.json  pr3_proxy_server-result-2018-04-01-12-02-38.json  test_files.sh  webproxy  webproxy.c  webproxy_noasan  workload.txt
